[package]
name = "websocket-server"
version = "0.1.0"
authors = ["JiaYe <planet2@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version="0.2.21", features=["full"] }
futures-util = "0.3.5"
tokio-tungstenite = "0.10.1"
serde_json = "1.0"
futures-channel = "0.3.5"
serde = { version = "1.0", features=["derive"]}